CT scroller WIP

--- a/examples/custom-theme.html
+++ b/examples/custom-theme.html
@@ -15,6 +15,11 @@
   <div class="content">
   </div>
 </div>
+
+<div class="contentHolder" style="margin-top:25px;">
+  <div class="content">
+  </div>
+</div>
 <script>
   var $ = document.querySelector.bind(document);
   window.onload = function () {
